--- a/src/app/components/stay-view/stay-view.component.scss
+++ b/src/app/components/stay-view/stay-view.component.scss
@@ -1,33 +1,35 @@
-/* schedule.component.scss */
-
-svg {
-  border: 2px solid darkgray;
-  background-color: gray;
+:host {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  height: 100vh;
+  padding: 12px;
 }
 
+.header {
+  padding: 6px 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+}
 
-// .regular {
-//     fill: blue;
-//     opacity: 0.7;
-//   }
-  
-//   .conflicted {
-//     fill: red;
-//     opacity: 0.7;
-//   }
-  
-//   .new {
-//     fill: green;
-//     opacity: 0.7;
-//   }
-  
-//   .changed {
-//     fill: yellow;
-//     opacity: 0.7;
-//   }
-  
-//   .deleted {
-//     fill: gray;
-//     opacity: 0.5;
-//     text-decoration: line-through;
-//   }
+.panel {
+  margin-left: 72px;
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.cursor { 
+  font: 400 24px/32px 'Roboto', sans-serif;
+  font-weight: bold;
+}
+
+svg {
+  display: block;
+  width: 100%;
+  margin: 0;
+  box-sizing: content-box;
+  flex-grow: 1;
+}
