--- a/src/app/components/stay-view/stay-view.component.html
+++ b/src/app/components/stay-view/stay-view.component.html
@@ -4,9 +4,9 @@
     <button (click)="drop()">Restart</button>
     <button (click)="calc()">Optimize</button>
     <button (click)="save()">Commit</button>
+    <button (click)="check()">Verify</button>
   </div>
   <span class="cursor"> Ocupação do Pier em {{ now | date:'dd/MM/yy HH:mm' }} </span>
 </div>
 <svg id="canvas">
-
 </svg>
